--- a/Simulations_MAMS.qmd
+++ b/Simulations_MAMS.qmd
@@ -452,7 +452,7 @@ This version of the MAMS trial simulator function does not use an alpha-spending
 `r` : allocation ratio, $r = \frac{n_0}{n_1}$ , $n_1 =$ `n`
 
 ```{r}
-mams_ef <- function(l, u, sd = 1, n, mu, r = 1){
+mams_ef <- function(l, u, sd = 1, n, mu, r = 1, silent = TRUE){
   J <- length(n) # number of stages
   K <- length(mu) - 1 # number of treatment arms i.e. number of hypothesis tests
   
@@ -468,6 +468,8 @@ mams_ef <- function(l, u, sd = 1, n, mu, r = 1){
   
 #--------- loop over stages 
   for(j in 1:J){
+    if(silent == FALSE){cat("Stage", j, ". Number of treatments:", length(active_id),"\n")}
+    
     y[[control_id]] <- c(y[[control_id]], rnorm(n=r*n[j], mean = mu[control_id], sd = sd))
     
     for (i in active_id) { # treatment arms 
@@ -610,12 +612,12 @@ mams_replicates2 <- function(l, u, mu, sd = 1, r = 1, n, nrep = 1000){
 ```{r}
 LFC <- c(0, 0.545,0.178,0.178, 0.178)
 HG <- c(rep(0,5))
-mams_ef(l = c(0, 0, 2.182), u = c(3.779, 2.672, 2.182), n = rep(30,3), mu = HG)
-size <- mams_replicates2(l = c(0, 0, 2.182), u = c(3.779, 2.672, 2.182), n = rep(30,3), mu = HG)$results
+mams_ef(l = c(0, 0, 2.182), u = c(3.779, 2.672, 2.182), n = rep(30,3), mu = HG, silent = FALSE)
+#size <- mams_replicates2(l = c(0, 0, 2.182), u = c(3.779, 2.672, 2.182), n = rep(30,3), mu = HG)$results
 
-plot(density(size$total_N), main = "Density of ESS", xlab = "Total (Running) Sample Size")
-abline(v = mean(size$total_N), col = "red", lty = 2)
-abline(v = 450, col = 'blue')
+#plot(density(size$total_N), main = "Density of ESS", xlab = "Total (Running) Sample Size")
+#abline(v = mean(size$total_N), col = "red", lty = 2)
+#abline(v = 450, col = 'blue')
 ```
 
 ```{r}
